# pyrinium

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pyrinium/: __init__.py  core.py  extractor.py  parser.py
tests/: test_core.py  test_extractor.py  test_parser.py
